k8s/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: payment-switch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:10.4.3
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: datasources
              mountPath: /etc/grafana/provisioning/datasources
            - name: dashboards-provider
              mountPath: /etc/grafana/provisioning/dashboards
            - name: dashboards
              mountPath: /var/lib/grafana/dashboards
      volumes:
        - name: datasources
          configMap:
            name: grafana-datasources
        - name: dashboards-provider
          configMap:
            name: grafana-dashboards
            items:
              - key: dashboard.yml
                path: dashboard.yml
        - name: dashboards
          configMap:
            name: grafana-dashboards
            items:
              - key: paymentswitch-overview.json
                path: paymentswitch-overview.json
              - key: rabbitmq-queues.json
                path: rabbitmq-queues.json
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: payment-switch
spec:
  type: NodePort
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30300
